[package]
name = "inkfox"
version = "0.1.2"
edition = "2021"
authors = ["VideoAnalysis Team"]
description = "Ultra-fast video keyframe extraction tool in Rust"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
rayon = "1.11"

dashmap = "5.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }

# Security dependencies
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"

# PyO3 dependencies
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py311"] }

[lib]
name = "inkfox"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
